# actix_learning

./: .dockerignore  Cargo.toml  Dockerfile  test.py
.github/workflows/: docker-publish.yml  general.yml
.sqlx/: query-fa5b807eba6f4fe7c9bed3aeccc5a85ab8ac46c73dabe8d0c8a953bee9918c59.json
configuration/: base.yaml  production.yaml
docker/: Dockerfile.alpine  Dockerfile.cargo-chef.alpine  Dockerfile.cargo-chef.debian
migrations/: 20240412052352_create_subscriptions_table.sql
routes/: health_check.rs  subscriptions.rs
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
