[package]
name = "actix_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix_learning"

[dependencies]
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["clock"] }
config = "0.14.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.10.0", features = ["v4"] }
validator = "0.18.1"
reqwest = { version = "0.12.5", features = ["json"] }
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.62"
anyhow = "1.0.86"

[dev-dependencies]
once_cell = "1.19.0"
proptest = "1.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "2.9.2"
rand = "0.8.5"
rand_core = "0.6.4"
claims = "0.7.1"
wiremock = "0.6.1"
serde_json = "1.0.120"
linkify = "0.10.0"
